--- a/_posts/2014-03-03-proposal.md
+++ b/_posts/2014-03-03-proposal.md
@@ -140,7 +140,7 @@ or editing the [wiki](https://github.com/noctarius/jenesis/wiki).
 ### API ideas
 This API is not meant to be a fully thought-through thing it is more like a basic idea on how such
 stuff could look like:
-```
+```java
 @RemoteAgent(agentClass = LoggingRemoteAgent.class)
 public class DistributedExmapleTestCase {
  
